# architectures-impl-pytorch

./: .gitignore  .pdm-python  README.md  pyproject.toml
alexnet/: network.py
densenet/: network.py
googlenet/: network.py
mobilenet/: network.py
notebooks/: yolov1.ipynb
notebooks/.ipynb_checkpoints/: yolov1-checkpoint.ipynb
notebooks/experimentations/: albumentations.ipynb  arch.ipynb  cv2yolo.ipynb  datasets.ipynb  loss.ipynb  sanity_test.ipynb  vectorization.ipynb
resnet/: network.py
shufflenet/: network.py
squeezenet/: network.py
vgg/: network.py
xception/: network.py
yolov1/: pyproject.toml
yolov1/src/yolov1/: __init__.py  config.py  detect.py  eval.py  train.py
yolov1/src/yolov1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
yolov1/src/yolov1/configs/: default.yaml
yolov1/src/yolov1/configs/.ipynb_checkpoints/: default-checkpoint.yaml
yolov1/src/yolov1/data/: augmentations.py  dataset.py  utils.py
yolov1/src/yolov1/models/: arch.py  arch_v0.py  backbone_factory.py  blocks.py  model.py
yolov1/src/yolov1/utils/: constants.py  general.py  io.py  loss.py  vis.py
